--- a/telecoms.css
+++ b/telecoms.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    07/06/2021
-Author:    Themewiz
+Last change:    12/10/2021
+Author:    creativemaze
 Primary use:    Telecoms
 -------------------------------------------------------------------*/
 
@@ -135,22 +135,28 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px !important; 	
+}
+
+.navbar-header a.navbar-brand{
+	text-decoration: none;
+	color: #111111;
+	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	padding-top: 28px;
 }
 
-.navbar-header a.navbar-brand{
-	text-decoration: none;
-	color: #111111 !important;
-	transition: 0.5s;
+.navbar-header a.navbar-brand:hover{
+	color: #111111;
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -421,11 +427,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .header-title{
-	max-width: 600px;
+	max-width: 650px;
 	display: block;
 	margin-left: 10vw;
-	position: relative;
-	z-index: 9;
 	text-align: left;
 	padding-right: 10px;
 }
@@ -439,18 +443,19 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: left;
 	display: block;
 	color: #111111;
+	text-transform: uppercase;
 }
 
 .header-title__sub{
 	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
-	display: inline-block;
+	display: block;
 	color: #696969;
 	line-height: 1.5em;
 	letter-spacing: 1px;
 	text-align: left;
-	padding: 20px 0;
+	padding: 25px 0;
 	max-width: 500px;
 }
 
@@ -496,15 +501,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .heading_group{
-	width: 100%;
+	width: calc(100% - 60px);
 	display: flex;
 	flex-wrap: wrap;
 	margin-bottom: 70px;
-	max-width: 1000px;
+	max-width: 1100px;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: #009fff;
-	margin-top:  -50px;
+	margin-top:  -55px;
 	position: relative;
 	z-index: 9999;
 }
@@ -657,7 +662,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .price_list > ul li{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
-	font-weight: 500;
+	font-weight: 600;
 	display: block;
 	color: #111111;
 	letter-spacing: 1px;
@@ -839,6 +844,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	border: solid 1px #111111;
 	display: inline-block;
 	margin-top: 45px;
+	border-radius: 3px;
 }
 
 .prev_nav{
@@ -902,7 +908,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .square_box{
 	max-width: 450px;
-	margin: 0 auto;
+	margin: 0;
 	width: 100%;
 	padding: 0 20px;
 }
@@ -933,7 +939,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .info_col_button a{
 	background-color: #ec2F4B;
-	width: 165px;
+	width: 160px;
 	min-height: 30px;
 	margin: 30px 0 0;
     border: none;
@@ -1019,12 +1025,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .thumb_content{
-	margin-top: 15px;
+	margin-top: 25px;
 }
 
 .thumb_content h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 16px;
 	font-weight: 600;
 	display: block;
 	color: #111111;
@@ -1032,6 +1038,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	line-height: 1.4em;
 	margin: 0;
+	text-transform: uppercase;
 }
 
 .inner_crumb{
@@ -1174,7 +1181,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .icon_crumb{
-	width: auto;
+	max-width: 350px;
 	height: 1px;
 	display: block;
 	border-bottom: solid 4px #ec2F4B;
@@ -1215,10 +1222,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.6. Telecoms Area Six --- */
 .telecoms_area_six{
-	max-width: 1280px;
+	max-width: 1400px;
 	margin: 0 auto 0;
-	padding: 0 20px;
-	margin-bottom: calc(9em - 40px);
+	padding: 0 25px;
+	margin-bottom: 9em;
 }
 
 .telecoms_group_six{
@@ -1228,38 +1235,42 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .question_col{
+	flex: 66.66%;
+	width: 66.66%;
+}
+
+.info_col{
+	flex: 33.33%;
+	width: 33.33%;
+}
+
+.question_area{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.panel_col{
 	flex: 50%;
 	width: 50%;
+	padding: 0 25px;
 }
 
-.media_area{
-	position: relative;
-	overflow: hidden;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-}
-
-.question_col img{
-	vertical-align: middle;
-	width: 100%;
-	height: auto;
-	display: block;
-}
-
-.col_area{
+.info_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
 }
 
-.question_box{
-	max-width: 475px;
+.info_box{
+	max-width: 450px;
 	margin: 0;
 	width: 100%;
 	padding: 0 20px;
 }
 
-.question_box h2{
+.info_box h2{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 40px;
 	font-weight: 700;
@@ -1269,10 +1280,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	line-height: 1.3em;
 	text-transform: uppercase;
-	margin-top: 0;
 }
 
-.question_box > p{
+.info_box > p{
 	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
@@ -1282,11 +1292,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	text-align: left;
 	line-height: 1.5em;
-}
-
-.accordion_box{
-	overflow:  hidden;
-	margin-top: 12px;
 }
 
 .accordion {
@@ -1371,7 +1376,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	border: solid 1px #e0e0e0;
 }
 
 .blog_image{
@@ -1382,19 +1386,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .blog_area{
 	overflow: hidden;
 	position: relative;
-	padding-bottom: 12px;
-	padding-right: 12px;
-	padding-top: 12px;
-	padding-left: 12px;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .blog_content{
-	padding: 25px 0;
-	text-align: left;
-	padding-left: 15px;
-	padding-right: 5px;
+	text-align: center;
+	padding: 25px 10px 10px;
 }
 
 .blog_date{
@@ -1405,16 +1402,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #696969;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
 	margin-bottom: 0;
 	width: 250px;
+	margin: auto;
 }
 
 .blog_col img{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 }
 
@@ -1428,42 +1425,31 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .blog_title a{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 20px;
 	display: block;
 	font-weight: 600;
 	color: #111111;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
 	text-decoration: none;
 	transition: 0.5s;
 	line-height: 1.4em;
 }
 
-a.blog_btn:hover,
-.blog_title a:hover{
-	opacity: 0.6;
-}
-
-.blog_content p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: left;
-	padding: 10px 0;
-	line-height: 1.5em;
+.blog_btn{
+	max-width: 250px;
+	margin: 0 auto;
 }
 
 a.blog_btn{
-	max-width: 120px;	
-    color: #111111;
-	border-bottom: solid 2px #111111;
+	width: 190px;	
+    border: none;
+    color: #ec2F4B;
+	margin: 0 auto;
 	padding-top: 10px;
     text-decoration: none;
 	text-transform: uppercase;
-    display: inline-block;
+    display: block;
     font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
@@ -1472,19 +1458,27 @@ a.blog_btn{
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.2em;
-	padding-bottom: 3px;
 }
 
-a.blog_btn::after{
-	content: "\203A";
-	font-size: 20px;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	height: auto;
-	padding-left: 5px;
-	top: 1px;
-	position: relative;
+.blog_title a:hover{
+	opacity: 0.6;
+}
+
+a.blog_btn:hover{
+	color: #111111;
+}
+
+.blog_crumb{
+	width: 50px;
+	height: 1px;
+	display: block;
+	border-bottom: solid 2px #ec2F4B;
+	margin: 10px auto 0;
+	transition: 0.5s;
+}
+
+a.blog_btn:hover .blog_crumb{
+	border-color: #111111;
 }
 
 /* --- 3.8. Telecoms Area Eight --- */
@@ -1609,8 +1603,8 @@ a.blog_btn::after{
 
 .count_box .counter{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 25px;
-	font-weight: 600;
+	font-size: 30px;
+	font-weight: 700;
 	display: block;
 	text-align: center;
 	color: #ec2F4B;
@@ -1897,12 +1891,12 @@ a.footer-brand img{
 	.question_col{
 		flex: 100%;
 		width: 100%;
-		max-width: 650px;
-		margin: auto;
 	}
 	
-	.question_box{
-		margin-top: 40px;
+	.info_col{
+		flex: 100%;
+		width: 100%;
+		margin-bottom: 40px;
 	}
 	
 	.blog_col{
@@ -1926,8 +1920,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -2018,25 +2012,29 @@ a.footer-brand img{
 	
 	.square_box_area{
 		max-width: 300px;
-		margin: auto;
 	}
 	
 	.flip_col{
 		flex: 100%;
 		width: 100%;
 		max-width: 300px;
-		margin: auto;
 	}
 	
 	.first_flip,
 	.second_flip{
-		margin-bottom: 75px;
+		margin-bottom: 80px;
+	}
+	
+	.panel_col{
+		flex: 100%;
+		width: 100%;
+		max-width: 700px;
 	}
 	
 	.count_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 30px;
+		margin: 20px 0;
 	}
 	
 	.second_border{
@@ -2057,7 +2055,7 @@ a.footer-brand img{
 	.telecoms_heading,
 	.square_box h2,
 	.bg_head,
-	.question_box h2{
+	.info_box h2{
 		font-size: 30px;
 	}
 	
@@ -2100,16 +2098,12 @@ a.footer-brand img{
 		font-size: 25px;
 	}
 	
-	.heading_group{
-		max-width: 350px;
-	}
-	
 	.price_col,
 	.square_col_left,
 	.square_col_right,
 	.square_box,
-	.question_col,
-	.question_box,
+	.info_box,
+	.panel_col,
 	.blog_col{
 		padding-left: 0;
 		padding-right: 0;
@@ -2147,7 +2141,7 @@ a.footer-brand img{
 	
 	.prev_nav,
 	.next_nav{
-		margin-top: 60px;
+		margin-top: 80px;
 	}
 }
 
@@ -2165,9 +2159,10 @@ a.footer-brand img{
 	.next_nav{
 		margin-top: 100px;
 	}
-	
-	.icon_box{
-		padding-left: 20px;
-		padding-right: 20px;
+}
+
+@media only screen and (max-width: 320px){
+	.box_list{
+		padding: 7px;
 	}
 }
