--- a/saas.css
+++ b/saas.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    15/06/2021
-Author:    Themewiz
+Last change:    15/10/2021
+Author:    creativemaze
 Primary use:    SAAS
 -------------------------------------------------------------------*/
 
@@ -25,6 +25,7 @@ Primary use:    SAAS
 	3.7. SAAS Area Seven
 	3.8. SAAS Area Eight
 	3.9. SAAS Area Nine
+	3.10. SAAS Area Ten
 	 
 4. Footer
 5. Responsive
@@ -120,22 +121,28 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px !important; 	
+}
+
+.navbar-header a.navbar-brand{
+	text-decoration: none;
+	color: #ffffff;
+	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	padding-top: 28px;
 }
 
-.navbar-header a.navbar-brand{
-	text-decoration: none;
-	color: #ffffff !important;
-	transition: 0.5s;
+.navbar-header a.navbar-brand:hover{
+	color: #ffffff;
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -376,9 +383,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .head_btn a:hover{
-	background-color: transparent;
-	color: #ffffff;
-	border: 1px solid #ffffff;
+	background-color: #ffffff;
+	color: #111111;
+	border-color: #ffffff;
 }
 
 .sliderwrap{
@@ -474,10 +481,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 500px;
 }
 
-.buttoncol{
-	max-width: 380px;
-}
-
 .buttoncol a{
 	background-color: #159957;
 	width: 150px;
@@ -500,8 +503,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .buttoncol a:hover{
-	color: #ffffff;
-	background-color: transparent;
+	background-color: #ffffff;
+	color: #111111;
 	border-color: #ffffff;
 }
 
@@ -509,7 +512,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	display: block;
 	max-width: 450px;
-	margin: auto;
 	padding: 25px 35px;
 	background: rgba(0,0,0,0.5);
 }
@@ -562,7 +564,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 16px;
-	font-weight: normal;
+	font-weight: 500;
 	color: #ffffff;
 	border-radius: 3px;
 	letter-spacing: 1px;
@@ -612,8 +614,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .col_box{
-	max-width: 600px;
-	margin: auto;
+	max-width: 500px;
+	margin: 0;
 	width: 100%;
 	padding: 0 20px;
 }
@@ -626,7 +628,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	text-align: left;
 	line-height: 1.3em;
-	margin-top: 0;
 }
 
 .col_box p{
@@ -677,7 +678,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 18px;
 	cursor: pointer;
 	transition: .5s;
-	background-color: #f6f6f6;
+	border: solid 1px #e0e0e0;
 	display: block;
 	margin-bottom: 25px;
 }
@@ -851,15 +852,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .bg_group{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
-	overflow: hidden;
 }
 
 .bg_box{
 	max-width: 550px;
-	margin: 0 auto;
+	margin: 0;
 	padding: 0 20px
 }
 
@@ -896,7 +896,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-transform: capitalize;
 	text-align: left;
 	padding-bottom: 8px;
-	cursor: pointer;
 }
 
 .bg_list > ul > li::before{
@@ -995,7 +994,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	min-height: 50px;
 	height: 100%;
 	overflow: auto;
-	background-color: #f6f6f6;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 .third_border{
@@ -1005,6 +1004,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .list_num{
 	float: left;
 	width: 25%;
+	max-width: 75px;
+	height: 75px;
+	background: #159957;
+	border-radius: 50%;
 }
 
 .num_info{
@@ -1013,20 +1016,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-left: 20px;
 }
 
-.list_num{
-	width: 80px;
-	height: 80px;
-	background: #159957;
-	border-radius: 50%;
-}
-
 .list_num > h4 {
 	display: block;
 	color: #ffffff;
 	margin-top: 25px;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 25px;
-	font-weight: normal;
+	font-weight: 500;
 	display: block;
 	text-align: center;
 }
@@ -1086,8 +1082,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	margin-bottom: 9em;
-	padding: 6em 0;
 }
 
 .saas_area_four::before {
@@ -1100,13 +1094,23 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background: rgba(24, 25, 34, 0.5);
 }
 
-.saas_group_four{
+/* --- 3.5. SAAS Area Five --- */
+.saas_area_five{
+	max-width: 1200px;
+	margin: 0 auto;
+	margin-top:  -300px;
+	padding: 0 25px;
+	margin-bottom: calc(9em - 40px);
 	position: relative;
-	z-index: 5;
-	max-width: 1100px;
-	margin: auto;
-	padding: 0 30px;
+}
+
+.saas_group_five{
 	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 40px 20px 0;
+	background-color: #ffffff;
+	margin-top: 40px;
 }
 
 .bg_head{
@@ -1144,7 +1148,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .service_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 25px;
+	padding: 0 20px 25px 20px;
 }
 
 .service_box{
@@ -1152,15 +1156,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: auto;
 	padding: 35px 25px;
 	text-align: center;
-	background: rgba(0,0,0,0.5);
+	background: transparent;
+	border: solid 1px #e0e0e0;
 	transition: 0.5s;
 }
 
 .icon_crumb{
-	width: auto;
+	max-width: 300px;
 	height: 1px;
 	display: block;
-	border-bottom: solid 4px #159957;
+	border-bottom: double 4px #159957;
 	margin: 0 auto 0;
 	transition: 0.5s;
 	visibility: hidden;
@@ -1168,7 +1173,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .service_box h3{
-	color: #ffffff;
+	color: #111111;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
 	font-weight: 600;
@@ -1176,6 +1181,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.4em;
+}
+
+.service_box:hover{
+	box-shadow: -1px 1px 12px 10px rgba(0,0,0,0.19);
 }
 
 .service_box .fas,
@@ -1192,7 +1201,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: normal;
 	padding-top: 10px;
 	display: block;
-	color: #d2d2d2;
+	color: #696969;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.5em;
@@ -1203,14 +1212,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	opacity: 1;
 }
 
-/* --- 3.5. SAAS Area Five --- */
-.saas_area_five{
+/* --- 3.6. SAAS Area Six --- */
+.saas_area_six{
 	max-width: 1200px;
 	margin: 0 auto 9em;
 	padding: 0 25px;
 }
 
-.saas_group_five{
+.saas_group_six{
 	width: 100%;
 	display: flex; 
 	flex-wrap: wrap;
@@ -1350,7 +1359,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     margin: auto;
@@ -1373,14 +1382,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	border-color: #111111;
 }
 
-/* --- 3.6. SAAS Area Six --- */
-.saas_area_six{
+/* --- 3.7. SAAS Area Seven --- */
+.saas_area_seven{
 	max-width: 1280px;
 	padding: 0 25px;
 	margin: 0 auto 9em;
 }
 
-.saas_group_six{
+.saas_group_seven{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -1403,8 +1412,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 700px;
-	margin: auto;
+	max-width: 900px;
 }
 
 .saas_data_col{
@@ -1416,7 +1424,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .progressbar {
 	display: inline-block;
 	width: 125px;
- 
 }
 
 .circle {
@@ -1459,9 +1466,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 10px;
 }
 
+.wide_area{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+}
+
 .wide_box{
 	max-width: 450px;
-	margin: 0 auto;
+	margin: 0;
 	width: 100%;
 }
 
@@ -1488,8 +1502,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.3em;
 }
 
-/* --- 3.7. SAAS Area Seven --- */
-.saas_area_seven{
+/* --- 3.8. SAAS Area Eight --- */
+.saas_area_eight{
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -1498,30 +1512,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	min-height: 200px;
 	height: 100%;
 	text-align: center;
-	margin-bottom: 9em;
-	padding: 6em 0;
+	padding: 6em 0 7.5em;
 	background-color: #159957;
 }
 
-.saas_group_seven{
+.saas_group_eight{
 	position: relative;
 	z-index: 9;
 	width: 100%;
 	max-width: 1000px;
 	margin: auto;
 	padding: 0 25px;
-}
-
-.bg_head{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 500;
-	display: block;
-	color: #ffffff;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.3em;
-	margin-top: 0;
 }
 
 .client_details{
@@ -1531,8 +1532,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: auto;
 	padding: 0 15px;
 	text-align: center;
-	padding-top: 30px;
-	padding-bottom: 20px;
+	padding-top: 25px;
+	padding-bottom: 5px;
 }
 
 .client_box{
@@ -1627,69 +1628,90 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 6px 0.40rem;
 }
 
-/* --- 3.8. SAAS Area Eight --- */
-.saas_area_eight{
-	max-width: 1280px;
-	margin: 0 auto 9em;
-	padding: 0 30px;
-	position: relative;
+/* --- 3.9. SAAS Area Nine --- */
+.saas_area_nine{
+	width: 100%;
+	margin: 0 0 9em;
+	min-height: 400px;
+	padding: 6em 25px 8.5em;
+	background-color: #eeeeee;
 }
 
-.saas_group_eight{
+.saas_group_nine{
+	max-width: 1400px;
+	margin: auto;
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
+	padding: 40px 0;
+}
+
+.blog_group{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding-bottom: 12px;
+	padding-right: 12px;
+	padding-top: 12px;
+	padding-left: 12px;
+	overflow: hidden;
+	background-color: #ffffff;
 }
 
 .blog_col{
-	flex: 25%;
-	width: 25%;
-	padding: 0 10px;
-	position: relative;
+	flex: 50%;
+	width: 50%;
+	padding: 0 20px;
+}
+
+.blog_area{
+	flex: 50%;
+	width: 50%;
 }
 
 .blog_box{
 	max-width: 350px;
+	margin: 0 auto;
 	position: relative;
 	text-align: center;
-	overflow: hidden;
-	margin: auto;
-	min-height: 150px;
 	transition: 0.5s;
+	overflow: hidden;
+	
 }
 
-.blog_image{
-	overflow: hidden;
+.blog_feat{
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #ffffff;
 }
 
 .blog_col img{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-.blog_image > a > img{
-	transition: ease-in-out 3.25s;
+.blog_box > a > img{
+	transition: ease-in-out 1.25s;
 }
 
-.blog_image > a > img:hover{
+.blog_box > a > img:hover{
 	transform: scale(1.15);
 }
 
 .blog_content{
 	max-width: 350px;
 	text-align: left;
-	padding-left: 5px;
+	padding: 25px 10px 0 25px;
 }
 
 .blog_date{
-	font-family: 'Montserrat', Arial, sans-serif;
-	font-size: 14px;
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 13px;
 	display: block;
 	font-weight: 600;
 	color: #696969;
@@ -1697,10 +1719,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	text-align: left;
 	width: 250px;
+	margin-top: 0;
 }
 
 .blog_title a{
-	font-family: 'Montserrat', Arial, sans-serif;
+	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
 	display: block;
 	font-weight: 600;
@@ -1712,17 +1735,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.4em;
 }
 
-.blog_title a:hover{
-	opacity: 0.6;
-}
-
+.blog_title a:hover,
 a.blog_btn:hover{
-	color: #111111;;
+	color: #159957;
 }
 
 a.blog_btn{
 	max-width: 120px;	
-    color: #159957;
+    color: #111111;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1733,6 +1753,7 @@ a.blog_btn{
     cursor: pointer;
 	letter-spacing: 1px;
 	text-align: center;
+	line-height: 1.2em;
 	padding-bottom: 3px;
 	padding-top: 10px;
 }
@@ -1749,23 +1770,53 @@ a.blog_btn::after{
 	position: relative;
 }
 
-/* --- 3.9. SAAS Area Nine --- */
-.saas_area_nine{
+.box_button a{
+	background-color: #159957;
+	width: 160px;
+	min-height: 25px;
+	margin: auto;
+	margin-top: 10px;	
+    border: none;
+    color: #ffffff;
+    padding: 14px 16px;
+    text-decoration: none;
+	text-transform: uppercase;
+    display: block;
+    font-size: 13px;
+	font-weight: 600;
+	font-family: 'Montserrat', Arial, sans-serif;
+    transition: 0.5s;
+    cursor: pointer;
+	border: 1px solid #159957;
+	letter-spacing: 1px;
+	text-align: center;
+}
+
+.box_button a:hover{
+	color: #111111;
+	background: transparent;
+	border-color: #111111;
+}
+
+/* --- 3.10. SAAS Area Ten --- */
+.saas_area_ten{
+	max-width: 1280px;
+	margin: 0 auto 2em;
+	padding: 0 35px;
 	position: relative;
+}
+
+.saas_group_ten{
+	width: 100%;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 350px;
-	height: 100%;
+	flex-wrap: wrap;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	padding: 3em 0;
-	margin-bottom: 2em;
+	padding: 40px 25px;
 }
 
-.saas_area_nine::before {
+.saas_group_ten::before {
 	content: '';
 	position: absolute;
 	z-index: 1;
@@ -1776,29 +1827,18 @@ a.blog_btn::after{
 	background: rgba(24, 25, 34, 0.6);
 }
 
-.saas_group_nine{
+.col_head{
+	flex: 50%;
+	width: 50%;
 	position: relative;
-	z-index: 5;
-	padding: 0 25px;
-	max-width: 1200px;
-	margin: auto;
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
+	z-index: 9999;
 }
 
 .col_info{
-	flex: 100%;
-	width: 100%;
-}
-	
-.col_head{
-	flex: 100%;
-	width: 100%;
-}
-
-.subscribe-row{
-	text-align: center;
+	flex: 50%;
+	width: 50%;
+	position: relative;
+	z-index: 9999;
 	margin-top: 35px;
 }
 
@@ -1809,17 +1849,19 @@ a.blog_btn::after{
 	font-weight: 500;
 	color: #ffffff;
 	letter-spacing: 1px;
-	text-align: center;
+	text-align: left;
 	line-height: 1.3em;
-	max-width: 600px;
-	margin: auto;
+	max-width: 500px;
+}
+
+.subscribe-row{
+	text-align: right;
 }
 
 .col_info input[type="email"]{
 	width: 350px;
-	padding: 10px 20px 14px;
-	padding-right: 50px;
-	border: 0;
+	padding: 12px 20px 14px;
+	border: solid 1px #e0e0e0;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	display: inline-block;
@@ -1836,8 +1878,9 @@ a.blog_btn::after{
 	padding: 11px 24px;
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 14px;
-	font-weight: normal;
+	font-size: 16px;
+	font-weight: 500;
+	text-transform: uppercase;
 	margin: 0;
 	margin-left: -4px;
 	color: #ffffff;
@@ -1849,9 +1892,9 @@ a.blog_btn::after{
 }
 
 .col_info input[type="submit"]:hover{
-	background-color: transparent;
-	color: #111111;
-	border-color: #111111;
+	background: transparent;
+	color: #ffffff;
+	border-color: #ffffff;
 }
 
 /* 4. FOOTER
@@ -2032,14 +2075,13 @@ a.footer-brand img{
 		width: 100%;
 		padding: 0;
 		max-width: 750px;
-		margin: auto;
 	}
 	
 	.bg_col{
 		flex: 100%;
 		width: 100%;
-		max-width: 750px;
-		margin: 20px auto;
+		max-width: 700px;
+		margin: 20px 0;
 	}
 	
 	.num_col{
@@ -2052,10 +2094,41 @@ a.footer-brand img{
 		border-right: none;
 	}
 	
+	.third_border{
+		margin-bottom: 0;
+	}
+	
 	.blog_col{
-		flex: 50%;
-		width: 50%;
-		margin-bottom: 40px;
+		flex: 100%;
+		width: 100%;
+		max-width: 700px;
+		margin: auto;
+	}
+	
+	.top_level{
+		margin-bottom: 35px;
+	}
+	
+	.col_info{
+		flex: 100%;
+		width: 100%;
+		margin-top: 0;
+	}
+	
+	.col_head{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.subscribe-row{
+		text-align: center;
+		margin-top: 35px;
+	}
+	
+	.col_head h3{
+		text-align: center;
+		width: 100%;
+		margin: auto;
 	}
 }
 
@@ -2073,8 +2146,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -2153,28 +2226,10 @@ a.footer-brand img{
 		flex: 100%;
 		width: 100%;
 		padding: 50px 0;
-		
-	}
-	
-	.first_left{
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
 	}
 	
 	.slide__left{
 		padding-top: 200px;
-	}
-
-	.num_col{
-		flex: 100%;
-		width: 100%;
-		padding: 0;
-	}
-	
-	.first_border{
-		border-right: none;
 	}
 	
 	.service_col{
@@ -2202,6 +2257,18 @@ a.footer-brand img{
 	.footer_col{
 		flex: 50%;
 		width: 50%;
+	}
+}
+
+@media only screen and (max-width: 800px){
+	.num_col{
+		flex: 100%;
+		width: 100%;
+		padding: 0;
+	}
+	
+	.first_border{
+		border-right: none;
 	}
 }
 
@@ -2239,12 +2306,28 @@ a.footer-brand img{
 	}
 	
 	.blog_col{
+		max-width: 350px;
+	}
+	
+	.blog_area{
 		flex: 100%;
 		width: 100%;
 	}
 	
 	.blog_date{
 		margin-top: 0;
+	}
+	
+	.col_info input[type="email"]{
+		display: block;
+		width: 100%;
+	}
+	
+	.col_info input[type="submit"]{
+		margin-top: 20px;
+		display: block;
+		width: 100%;
+		margin-left: 0;
 	}
 	
 	.footer_col{
@@ -2281,21 +2364,8 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
-	.list_num > h4{
-		font-size: 20px;
-		margin-top: 30px;
-	}
-	
-	.col_info input[type="email"]{
-		display: block;
-		width: 100%;
-	}
-	
-	.col_info input[type="submit"]{
-		margin-top: 20px;
-		display: block;
-		width: 100%;
-		margin-left: 0;
+	.col_head h3{
+		font-size: 25px;
 	}
 }
 
@@ -2305,7 +2375,28 @@ a.footer-brand img{
 		padding: 15px;
 	}
 	
-	.col_head h3{
-		font-size: 25px;
+	.list_num{
+		max-width: 70px;
+		height: 70px;
+	}
+	
+	.list_num > h4{
+		font-size: 20px;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	.list_num{
+		max-width: 62px;
+		height: 62px;
+	}
+	
+	.list_num > h4{
+		margin-top: 20px;
+	}
+	
+	.service_box{
+		padding-left: 15px;
+		padding-right: 15px;
 	}
 }
