--- a/beauty-spa.css
+++ b/beauty-spa.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    25/06/2021
-Author:    Themewiz
+Last change:    17/10/2021
+Author:   creativemaze
 Primary use:    Beauty Spa
 -------------------------------------------------------------------*/
 
@@ -125,22 +125,28 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px !important; 	
+}
+
+.navbar-header a.navbar-brand{
+	text-decoration: none;
+	color: #ffffff;
+	transition: 0.5s;
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	padding-top: 28px;
 }
 
-.navbar-header a.navbar-brand{
-	text-decoration: none;
-	color: #ffffff !important;
-	transition: 0.5s;
+.navbar-header a.navbar-brand:hover{
+	color: #ffffff;
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -370,7 +376,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -516,12 +522,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .prev_button,
 .next_button{
 	width: auto;
-	font-size: 18px;
+	font-size: 14px;
 	transition: 0.6s ease;
 	border-radius: 0 3px 3px 0;
 	background-color: transparent;
 	display: block;
-	padding: 10px 20px;
+	padding: 10px 16px;
 	color: #ffffff;
 	cursor: pointer;
 	border: solid 1px #ffffff;
@@ -598,10 +604,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	content: "\f00c";
 	font-weight: 900;
 	font-size: 15px;
-	border: solid 1px #ffffff;
+	border: solid 1px #111111;
 	border-radius: 50%;
 	padding: 12px;
 	color: #ffffff;
+	background-color: #111111;
 }
 
 .feature_content h3{
@@ -669,10 +676,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .cube_image{
 	overflow: hidden;
 	position: relative;
-}
-
-.cube_image > img:hover{
-	transform: scale(1.15);
 }
 
 .cube_area{
@@ -800,7 +803,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.4em;
-	padding-top: 10px;
 }
 
 .spa_icon_box .fas,
@@ -862,9 +864,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .info_col_box{
-	padding: 2em 0;
-	max-width: 600px;
-	margin: auto;
+	max-width: 500px;
 }
 
 .info_col_box h2{
@@ -902,7 +902,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -964,7 +964,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .service_content{
 	position: relative;
-	padding: 25px 10px;
+	padding: 10px 5px;
 	transition: 0.5s;
 	text-align: left;
 }
@@ -973,17 +973,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 18px;
-	font-weight: 500;
+	font-weight: 600;
 	display: inline-block;
 	text-align: left;
 	letter-spacing: 1px;
 	line-height: 1.4em;
-	margin-bottom: 0;
 }
 
 .area_button > a{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 12px;
+	font-size: 13px;
 	font-weight: 600;
 	letter-spacing: 1px;
 	text-align: right;
@@ -1017,10 +1016,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.5. Spa Area Five --- */
 .spa_area_five{
 	width: 100%;
-	margin: 0 0 9em;
+	margin: 0;
 	min-height: 400px;
 	padding: 6em 25px;
-	background-color: #f7f7f7;
+	background-color: #eeeeee;
 }
 
 .spa_group_five{
@@ -1201,7 +1200,7 @@ a.blog_btn:hover .blog_crumb{
 .count_box{
 	max-width: 350px;
 	margin: 0 auto;
-	padding: 35px 30px; 
+	padding: 25px 20px 15px 20px; 
 	text-align: left;
 	background: #ffffff;
 	transition: 0.5s;
@@ -1293,14 +1292,13 @@ a.blog_btn:hover .blog_crumb{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 	border-radius: 50%;
 }
 
 .review_box{
 	max-width: 450px;
-	margin: 0 auto;
+	margin: 0;
 	width: 100%;
 	padding: 0 20px;
 }
@@ -1330,8 +1328,8 @@ a.blog_btn:hover .blog_crumb{
 
 .review_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
 }
 
@@ -1339,8 +1337,6 @@ a.blog_btn:hover .blog_crumb{
 	max-width: 300px;
 	height: auto;
 	padding: 10px;
-	transition: 0.5s;
-	overflow: hidden;
 }
 
 .client_name{
@@ -1634,23 +1630,6 @@ a.footer-brand img{
 		z-index: 999;
 	}
 	
-	.blog_col{
-		flex: 50%;
-		width: 50%;
-		margin-bottom: 40px;
-	}
-	
-	.review_col_left{
-		flex: 100%;
-		width: 100%;
-		margin-bottom: 45px;
-	}
-
-	.review_col_right{
-		flex: 100%;
-		width: 100%;
-	}
-	
 	.spa_icon_col{
 		flex: 50%;
 		width: 50%;
@@ -1671,6 +1650,24 @@ a.footer-brand img{
 		flex: 100%;
 		width: 100%;
 		padding: 0;
+		margin-top: 20px;
+	}
+	
+	.blog_col{
+		flex: 50%;
+		width: 50%;
+		margin-bottom: 40px;
+	}
+	
+	.review_col_left{
+		flex: 100%;
+		width: 100%;
+		margin-bottom: 45px;
+	}
+
+	.review_col_right{
+		flex: 100%;
+		width: 100%;
 	}
 }
 
@@ -1688,8 +1685,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		margin-top: 7px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1764,7 +1761,12 @@ a.footer-brand img{
 	.spa_group_col{
 		flex: 100%;
 		width: 100%;
-		margin-bottom: 40px;
+		margin-top: 20px;
+	}
+	
+	.count_col{
+		flex: 50%;
+		width: 50%;
 	}
 	
 	.client_col{
@@ -1796,6 +1798,11 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
+	.cube_col_box{
+		padding: 3em 30px;
+		height: 100%;
+	}
+	
 	.blog_col{
 		flex: 100%;
 		width: 100%;
@@ -1810,6 +1817,16 @@ a.footer-brand img{
 	.first_border,
 	.third_border{
 		border-right: none;
+	}
+	
+	.count_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.client_col{
+		flex: 100%;
+		width: 100%;
 	}
 	
 	.footer_col{
@@ -1828,24 +1845,18 @@ a.footer-brand img{
 	.review_box,
 	.review_col_left,
 	.review_col_right,
-	.spa_group_col,
 	.spa_icon_col{
 		padding-left: 0;
 		padding-right: 0;
 	}
 	
-	.client_col{
-		flex: 100%;
-		width: 100%;
+	.area_button > a{
+		padding-top: 0;
 	}
 }
 
 @media only screen and (max-width: 360px){
 	.header-title__main{
 		font-size: 30px;
-	}
-	
-	.header-title {
-		padding: 0 35px;
 	}
 }
